<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView

            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/appMenu"
            android:textSize="25sp"/>


        <Button
            android:id="@+id/GoAct2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go" />

        <Button
            android:id="@+id/Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToGoogle"
             />
        <Button
            android:id="@+id/CrearAlarma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crearAlarma"
             />

        <Button
            android:id="@+id/Llamar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/llamar"
             />


        <Button
            android:id="@+id/Foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tomarFoto"
            />


        <Button
            android:id="@+id/enviarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviarEmail"
            />




    </LinearLayout>

</LinearLayout>